# rag-system

./: .env.example  .gitignore  README.md  check_original_ids.py  check_qdrant_data.py  docker-compose.yml  download.py  main.py  my_queries.py  pyproject.toml  query_interface.py  rag_scincl.py  rag_system.py  rag_with_persistence.py  setup_fresh_scincl.py  setup_fresh_tfidf.py  setup_rag.py  show_paper_ids.py  simple_rag.py  test_persistent_rag.py  test_queries.py  vectorizer.pkl  vectorizer_fresh.pkl
data/: download.py  pubmed_abstracts.csv  retrieval_requests_with_ids.csv
eval/: benchmark.py  compare_fresh_results.py  evaluate_fresh_tfidf.py  evaluate_rag.py  evaluate_rag_fixed.py  evaluate_scincl.py  metrics.py  queries_latest.csv  retrieval_queries.csv  retrieval_requests.csv  show_scincl_results.py
qdrant/: __init__.py  cli.py  examples.py  sentence_transformer.py  setup.py  test.py  tfidf.py  utils.py
scincl/: __init__.py  cli.py  core.py  metrics.py  utils.py
