[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.35.3",
    "pandas>=2.3.3",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]
