[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.35.3",
    "pandas>=2.3.3",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "openai>=2.6.1",
    "python-dotenv>=1.1.1",
    "pymilvus[model,milvus_lite]>=2.6.5",
    "peft>=0.18.0",
    "flagembedding>=1.3.5",
    "boto3>=1.42.7",
    "deepeval>=3.7.5",
    "coloredlogs>=15.0.1",
    "verboselogs>=1.7",
]
